@@ -1,3 +1,9 @@
+2010-10-06  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-query.lisp (query-print-string): Change cursor color
+	and show parenthesis matching with colors (on match and on
+	errors).
+
 2010-10-05  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-internal.lisp (show-all-children): Do not raise a
